<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:fillViewport="true"
    android:paddingTop="50dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="@color/bg_register_background"
    app:layout_collapseParallaxMultiplier="1.0"
    android:weightSum="1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/msquare"
        android:background="#ffffff"
        android:id="@+id/imageView2"
        android:layout_weight="0.46"
        android:contentDescription=""
        tools:ignore="ContentDescription,InefficientWeight" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/login_input_email"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@color/bg_name"
            android:padding="10dp"
            android:hint="@string/hint_email" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/login_input_password"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_login"
            android:inputType="textPassword"
            android:padding="10dp"
            android:hint="@string/hint_password" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_input_layout_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/login_input_user"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_login"
            android:inputType="textPassword"
            android:padding="10dp"
            android:hint="user"
            tools:ignore="HardcodedText" />
    </android.support.design.widget.TextInputLayout>


    <Button android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:background="@color/login_button_background"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"/>

    <Button android:id="@+id/btn_link_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_link_signup"
        android:background="@null"
        android:layout_marginTop="3dp"
        android:textColor="@android:color/black"/>

</LinearLayout>