<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/bg_register_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >
        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/signup_input_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="40"
                android:hint="Name"
                android:padding="10dp"
                android:background="@color/bg_name"
                tools:ignore="HardcodedText" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/signup_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:background="#ffffff"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/signup_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="10dp"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:background="#ffffff"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_input_layout_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/signup_input_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="10dp"
                android:hint="@string/mobile"
                android:background="#ffffff"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_input_layout_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_input_user"
                android:hint="user"
                android:padding="10dp"
                android:background="#ffffff"
                tools:ignore="HardcodedText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_input_layout_age"
            android:layout_width="match_parent"
            android:layout_height="119dp"
            android:layout_marginTop="10dp">

            <Button android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_sign_up"
                android:background="@color/login_button_background"
                android:layout_marginTop="40dp"
                android:textColor="@android:color/white"
                android:layout_weight="1" />

            <Button android:id="@+id/btn_link_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_link_login"
                android:background="#ffffff"
                android:layout_marginTop="3dp"
                android:textColor="@android:color/black"
                android:layout_weight="1" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</LinearLayout>